--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,8 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.loopj.android:android-async-http:1.4.7'
     compile 'com.android.support:support-v13:+'
+    compile 'com.android.support:cardview-v7:+'
+    compile 'com.android.support:recyclerview-v7:+'
+    compile 'com.melnykov:floatingactionbutton:1.3.0'
+    compile 'com.joanzapata.android:android-iconify:1.0.9'
 }
