--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:+'
     compile 'com.melnykov:floatingactionbutton:1.3.0'
     compile 'com.joanzapata.android:android-iconify:1.0.9'
+    compile 'com.github.ksoichiro:android-observablescrollview:+'
 }
